--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-persist",
+  "name": "@killerqueen59/redux-persist",
   "version": "6.0.0",
   "description": "persist and rehydrate redux stores",
   "main": "lib/index.js",
